@@ -1,3 +1,5 @@
+	11. Added information for developers of implementation of abstract interface.
+	
 jrl-dynamics version 1.5 released July 16, 2007
 	
 	10. (fumio) add double CjrlDynamicRobot::upperBoundDof(int, const
